set(CMAKE_C_FLAGS "-Wall -std=c11")

cmake_minimum_required(VERSION 3.5)
project(hkdcc C)
add_library(codegen STATIC codegen.c)
add_library(parse STATIC parse.c)
add_library(util STATIC util.c)
add_library(util_test STATIC util_test.c)
add_executable(hkdcc hkdcc.c)
target_link_libraries(hkdcc codegen parse util util_test)
